--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,20 @@
 Package: gRc
-Version: 0.4-3
-Title: Inference in Graphical Gaussian Models with Edge and Vertex
-        Symmetries
-Author: Søren Højsgaard <sorenh@math.aau.dk>, Steffen L. Lauritzen
-        <steffen@stats.ox.ac.uk>
+Version: 0.4-3.3
+Title: Inference in Graphical Gaussian Models with Edge and Vertex Symmetries
+Author: Søren Højsgaard <sorenh@math.aau.dk>, Steffen L. Lauritzen <steffen@stats.ox.ac.uk>
 Maintainer: Søren Højsgaard <sorenh@math.aau.dk>
 Description: Estimation, model selection and other aspects of
-        statistical inference in Graphical Gaussian models with edge
-        and vertex symmetries (Graphical Gaussian models with colours).
+    statistical inference in Graphical Gaussian models with edge and
+    vertex symmetries (Graphical Gaussian models with colours).
+    Documentation about 'gRc' is provided in the paper by Hojsgaard and
+    Lauritzen (2007, <doi:10.18637/jss.v023.i06>) and the paper by
+    Hojsgaard and Lauritzen (2008, <doi:10.1111/j.1467-9868.2008.00666.x>).
 License: GPL
 Encoding: UTF-8
-Depends: methods, gRbase
-Imports:
-    MASS,
+Depends: methods, gRbase (>= 1.8-5)
+Imports: MASS,
+Suggests: Rgraphviz, RBGL, microbenchmark, knitr
 URL: http://people.math.aau.dk/~sorenh/software/gR/
-Suggests:
-    Rgraphviz,
-    RBGL,
-    microbenchmark,
-    knitr
 Repository: CRAN
 ByteCompile: Yes
+Roxygen: list(markdown = TRUE)
