--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: gRc
-Version: 0.4-3.3
+Version: 0.4.4
 Title: Inference in Graphical Gaussian Models with Edge and Vertex Symmetries
-Author: Søren Højsgaard <sorenh@math.aau.dk>, Steffen L. Lauritzen <steffen@stats.ox.ac.uk>
+Author: Søren Højsgaard <sorenh@math.aau.dk>, Steffen L. Lauritzen <lauritzen@math.ku.dk>
 Maintainer: Søren Højsgaard <sorenh@math.aau.dk>
 Description: Estimation, model selection and other aspects of
     statistical inference in Graphical Gaussian models with edge and
@@ -11,10 +11,22 @@ Description: Estimation, model selection and other aspects of
     Hojsgaard and Lauritzen (2008, <doi:10.1111/j.1467-9868.2008.00666.x>).
 License: GPL
 Encoding: UTF-8
-Depends: methods, gRbase (>= 1.8-5)
-Imports: MASS,
-Suggests: Rgraphviz, RBGL, microbenchmark, knitr
+Depends:
+    R (>= 3.6.0),
+    methods,
+    gRbase (>= 1.8-5)
+Imports:
+    MASS,
+    magrittr,
+    Rcpp (>= 0.11.1)
+Suggests:
+    Rgraphviz,
+    RBGL,
+    microbenchmark,
+    knitr
+LinkingTo: Rcpp (>= 0.11.1), RcppArmadillo
 URL: http://people.math.aau.dk/~sorenh/software/gR/
 Repository: CRAN
 ByteCompile: Yes
 Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.1
