prepared for version 0.4.4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,15 @@ S3method(add1,rcox)
 S3method(coef,rcox)
 S3method(drop1,rcox)
 S3method(fit,rcox)
+S3method(formula2names,"NULL")
+S3method(formula2names,default)
+S3method(formula2names,formula)
+S3method(formula2names,list)
 S3method(formula2string,default)
 S3method(formula2string,list)
 S3method(getScore,rcon)
 S3method(getScore,rcor)
+S3method(logLik,rcox)
 S3method(print,rcox)
 S3method(print,statTable)
 S3method(print,summary.rcox)
@@ -26,6 +31,7 @@ export(comparecc)
 export(dataRep)
 export(dimension)
 export(fitInfo)
+export(formula2names)
 export(formula2string)
 export(getScore)
 export(getSlot)
