--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Suggests:
     microbenchmark,
     knitr
 LinkingTo: Rcpp (>= 0.11.1), RcppArmadillo
-URL: http://people.math.aau.dk/~sorenh/software/gR/
+URL: https://people.math.aau.dk/~sorenh/software/gR/
 Repository: CRAN
 ByteCompile: Yes
 Roxygen: list(markdown = TRUE)
