--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: gRc
-Version: 0.4.6
+Version: 0.5.0
 Title: Inference in Graphical Gaussian Models with Edge and Vertex
         Symmetries
 Author: Søren Højsgaard <sorenh@math.aau.dk>, Steffen L. Lauritzen <lauritzen@math.ku.dk>
@@ -12,14 +12,14 @@ Description: Estimation, model selection and other aspects of
     Hojsgaard and Lauritzen (2008, <doi:10.1111/j.1467-9868.2008.00666.x>).
 License: GPL
 Encoding: UTF-8
-Depends: R (>= 3.6.0), methods, gRbase (>= 1.8-5)
-Imports: MASS, magrittr, Rcpp (>= 0.11.1)
-Suggests: Rgraphviz, RBGL, microbenchmark, knitr
+Depends: R (>= 4.2.0), methods, gRbase (>= 2.0.0)
+Imports: MASS, igraph, stats4, Rcpp (>= 0.11.1)
+Suggests: microbenchmark, knitr
 LinkingTo: Rcpp (>= 0.11.1), RcppArmadillo
 URL: https://people.math.aau.dk/~sorenh/software/gR/
 Repository: CRAN
 ByteCompile: Yes
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 NeedsCompilation: yes
 Packaged: 2021-03-30 06:11:38 UTC; sorenh
 Date/Publication: 2021-04-03 13:50:05 UTC
